--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Blog</title>
+    <title>WangYue的技术博客</title>
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
 <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link rel="stylesheet" href="../stylesheets/style.css">
@@ -11,7 +11,7 @@
 <body>
 
 
-    <nav class="navbar navbar-inverse navbar-static-top">
+    <nav class="navbar navbar-inverse navbar-static-top ">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -21,16 +21,29 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">MyBlog</a>
+      <a class="navbar-brand" href="/">BigBlog</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
+    <!-- 搜索框 -->
+        <form class="navbar-form navbar-left visible-lg-inline-block" role="search" action="/search" method="get">
+            <div class="form-group">
+                <label for="search" class="control-label sr-only">搜索</label>
+                <div>
+                    <input type="text" class="form-control" id="search" name="keyword">
+                </div>
+            </div>
+            <button type="submit" class="btn">
+                <span class="glyphicon glyphicon-search"></span>
+                Search
+            </button>
+        </form>
     <!-- 导航列表 -->
         <div class="collapse navbar-collapse" id="navbar">
             <ul class="nav navbar-nav navbar-right">
                 <li class="visible-lg-inline-block">
                     <% if(user) { %>
-                        <a href="#"><span class="glyphicon glyphicon-user"></span><%= user.name %></a>
+                        <a href="/"><span class="glyphicon glyphicon-user"></span><%= user.name %>，你好</a>
                     <% } %>
                 </li>
                 <li class="hidden-lg">
